fixed single-story text-align and dashboard trademark logo

--- a/themes/renewal-funds/sass/_custom-template-part-dash.scss
+++ b/themes/renewal-funds/sass/_custom-template-part-dash.scss
@@ -125,11 +125,12 @@
     width: 100%;
     max-width: 656px;
     max-height: 656px;
+    margin: 0 auto;
+    margin-bottom: 2rem;
     @include desktop {
         position: absolute;
         left: 280px;
         top: 100px;
-        margin-bottom: 3rem;
     }
 }
 
@@ -139,16 +140,25 @@
 }
 
 .trademark-logo {
-    width: 60%;
+    width: 50%;
     display: flex;
     margin: 0 auto;
     padding-top: 1rem;
+    @include tablet {
+        padding-top: 2rem;
+    }
+    @include desktop {
+        width: 60%;
+    }
 }
 
 .trademark-text-wrapper {
     background-color: $color__brand-color-green;
     display: flex;
     justify-content: center;
+    @include tablet {
+        padding: 2rem 0 3rem 0;
+    }
 }
 
 .trademark-text {
@@ -166,7 +176,6 @@
     @include desktop {
         font-size: 1.8rem;
         width: 70%;
-        margin: 3rem 0 5rem 0;
     }
 }
 
@@ -177,7 +186,7 @@
 .home .site-footer {
     @include desktop {
         position: absolute;
-        bottom: -800px;
+        bottom: -900px;
         width: 100%;
     }
 }
